tests/errors/file.xen
grab { read } from "std::fs"

spawn content: string = read("nonexistent.txt")
